--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@material-tailwind/react": "^2.1.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "react-router-dom": "^6.22.3",
     "sweetalert2": "^11.10.7"
   },
