--- a/package.json
+++ b/package.json
@@ -15,12 +15,16 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@material-tailwind/react": "^2.1.9",
+    "@metamask/sdk-react": "^0.18.6",
+    "ethers": "^6.12.0",
     "react": "^18.2.0",
     "react-d3-speedometer": "^2.2.1",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
+    "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.22.3",
-    "sweetalert2": "^11.10.7"
+    "sweetalert2": "^11.10.7",
+    "web3": "^4.8.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
