--- a/backend/package.json
+++ b/backend/package.json
@@ -11,10 +11,10 @@
   "license": "ISC",
   "dependencies": {
     "@openzeppelin/contracts": "^5.0.2",
-    "dotenv": "^16.4.5",
-    "hardhat": "^2.22.2"
+    "hardhat": "^2.22.3"
   },
   "devDependencies": {
-    "@nomicfoundation/hardhat-toolbox": "^5.0.0"
+    "@nomicfoundation/hardhat-toolbox": "^5.0.0",
+    "dotenv": "^16.4.5"
   }
 }
