--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "serve": "serve -s dist",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
@@ -18,6 +19,7 @@
     "@metamask/sdk-react": "^0.18.6",
     "ethers": "^6.12.0",
     "react": "^18.2.0",
+    "serve": "^14.2.1",
     "react-d3-speedometer": "^2.2.1",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
